--- a/app/src/main/res/layout/application.xml
+++ b/app/src/main/res/layout/application.xml
@@ -7,20 +7,12 @@
 
     <TextView
         android:id="@+id/company"
-        android:layout_width="97dp"
+        android:layout_width="242dp"
         android:layout_height="50dp"
         android:layout_marginStart="28dp"
         android:layout_marginTop="16dp"
         android:text="TextView"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-    <TextView
-        android:id="@+id/position"
-        android:layout_width="97dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="90dp"
-        android:layout_marginTop="16dp"
-        android:text="TextView"
+        android:textSize="16dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -28,12 +20,12 @@
         android:id="@+id/edit"
         android:layout_width="40dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="85dp"
+        android:layout_marginStart="6dp"
         android:layout_marginTop="8dp"
-        android:src="@drawable/edit_icon"
         android:background="#fafafa"
+        android:src="@drawable/edit_icon"
         android:tint="#FD5F00"
-        app:layout_constraintStart_toEndOf="@+id/position"
+        app:layout_constraintStart_toEndOf="@+id/company"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageButton
@@ -44,7 +36,7 @@
         android:background="#fafafa"
         android:layout_marginTop="8dp"
         android:src="@drawable/delete_icon"
-        android:tint="#FD5F00"
+        android:tint="#215d9b"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 </android.support.constraint.ConstraintLayout>
