--- a/app/src/main/res/layout/application.xml
+++ b/app/src/main/res/layout/application.xml
@@ -18,10 +18,10 @@
 
     <ImageButton
         android:id="@+id/edit"
-        android:layout_width="40dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="6dp"
-        android:layout_marginTop="8dp"
+        android:layout_width="25dp"
+        android:layout_height="28dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="15dp"
         android:background="#fafafa"
         android:src="@drawable/edit_icon"
         android:tint="#FD5F00"
@@ -30,11 +30,11 @@
 
     <ImageButton
         android:id="@+id/delete"
-        android:layout_width="40dp"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
+        android:layout_width="25dp"
+        android:layout_height="28dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginTop="15dp"
         android:background="#fafafa"
-        android:layout_marginTop="8dp"
         android:src="@drawable/delete_icon"
         android:tint="#215d9b"
         app:layout_constraintEnd_toEndOf="parent"
